<resources>
    <string name="app_name">Notepad</string>
    <string name="note_it_all">Note it all</string>
    <string name="get_started">Get Started</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes...</string>
    <string name="add_note">Add Note</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Start typing...</string>
    <string name="save">Save</string>
    <string name="app_description">Notepad is a simple, secure, and intuitive workspace designed to effortlessly capture your daily ideas, thoughts, and task lists. Your personal notes stay fully protected through robust Firebase Cloud Authentication and quick biometric login, supported by smooth progress indicators across the Login, Sign-Up, and Main screens to ensure a seamless navigation experience. You can easily organize entries using custom color palettes, perform instant searches, and quickly convert physical text into digital notes using the built-in OCR scanner. Furthermore, the newly added sharing system allows you to convert any note into a styled card image and share it directly with anyone on WhatsApp with a single click of the Share button.</string>
    <string name="create_account">Create Account</string>
    <string name="splash_des">"Capture your daily thoughts, ideas, and tasks instantly in one secure place."</string>
    <string name="sign_up_desc">Join us to keep your notes organized and safe.</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="update">Update</string>
    <string name="biometricfinger_text">BiometricFinger</string>
    <string name="no_date">No date</string>
    <string name="forget_page_description">Enter your registered email below to receive password reset instructions.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="about_app">About App</string>
    <string name="version">Version v1.3.0</string>
    <string name="developed_by">Developed by</string>
    <string name="dev_name">Ahmad Salahuddin</string>
    <string name="contact_us">Contact Us</string>
    <string name="back_btn_description">Back</string>
    <string name="camera_btn_description">Camera</string>
    <string name="shared_via_notepad">Shared via Notepad</string>
</resources>